// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header> navLinks center 1`] = `
<header
  className="header nav--center"
>
  <nav>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="highcharts"
      to="/highcharts"
    >
      Highcharts
    </NavLink>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="d3-js"
      to="/d3-js"
    >
      D3.js
    </NavLink>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="linebarchart"
      to="/linebarchart"
    >
      LinebarChart
    </NavLink>
  </nav>
</header>
`;

exports[`<Header> navLinks default left 1`] = `
<header
  className="header"
>
  <nav>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="highcharts"
      to="/highcharts"
    >
      Highcharts
    </NavLink>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="d3-js"
      to="/d3-js"
    >
      D3.js
    </NavLink>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="linebarchart"
      to="/linebarchart"
    >
      LinebarChart
    </NavLink>
  </nav>
</header>
`;

exports[`<Header> navLinks right 1`] = `
<header
  className="header nav--right"
>
  <nav>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="highcharts"
      to="/highcharts"
    >
      Highcharts
    </NavLink>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="d3-js"
      to="/d3-js"
    >
      D3.js
    </NavLink>
    <NavLink
      activeClassName="link--current"
      className="link"
      key="linebarchart"
      to="/linebarchart"
    >
      LinebarChart
    </NavLink>
  </nav>
</header>
`;
